--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,28 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js">
+<html class="no-js">
 <head>
     <meta charset="utf-8" />
-
-    <title>{% if meta.title %}{{ meta.title }} | {% endif %}{{ site_title }}</title>
-    {% if meta.description %}
-    <meta name="description" content="{{ meta.description }}">
-    {% endif %}{% if meta.robots %}
-    <meta name="robots" content="{{ meta.robots }}">
-    {% endif %}
+    <title>{{ $root.page.title }}</title>
+    <meta ng-repeat="meta in $root.page.metas" name="meta.name" content="meta.content">
     <link rel="stylesheet" href="css/styles.css" type="text/css" />
-
-    <!--<script src="{{ theme_url }}/js/modernizr-2.6.1.min.js"></script>-->
 </head>
 <body>
 
 <header id="header">
     <div class="inner clearfix">
-        <h1><a href="{{ base_url }}">{{ site_title }}</a></h1>
-        <ul class="nav">
-            {% for page in pages %}
-            <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-            {% endfor %}
-        </ul>
+
     </div>
 </header>
 
@@ -33,9 +21,28 @@
 <footer id="footer">
 
 </footer>
-<script src="https://connect.facebook.net/en_US/all.js"></script>
+<div id="fb-root"></div>
+<script>
+
+    window.fbAsyncInit = function() {
+        FB.init({
+            appId      : "150738101641745", // App ID
+            status     : true,    // check login status
+            cookie     : true,    // enable cookies to allow the
+            // server to access the session
+            xfbml      : false     // parse page for xfbml or html5
+            // social plugins like login button below
+        });
+        //this way we are sure that facebook API is loaded before loading our app
+        angular.bootstrap(document, ['paquettea.facebook.app']);
+
+
+    };
+</script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.3/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.3//angular-route.min.js"></script>
 <script type="text/javascript" src="js/scripts.js"></script>
+<script src="https://connect.facebook.net/en_US/all.js"></script>
 
 </body>
 </html>
